Removed package.xml as its not required now, added the repo url

--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -7,6 +7,7 @@ project:
         namespace: HealthCloudGA
     git:
         default_branch: 'main'
+        repo_url: https://github.com/Industries-SolutionFactory-Connect/hc-home-health
         prefix_feature: 'feature/'
         prefix_beta: 'beta/'
         prefix_release: 'release/'
