--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -55,7 +55,7 @@ flows:
                 task: load_dataset
                 options:
                     mapping:  datasets/default/default.mapping_definitefields.yml
-                    sql_path: datasets/default/default.dataset3.sql
+                    sql_path: datasets/default/default.dataset.sql
                 ui_options:
                     name: Load Business Data
             3:
